# ETL_Agent

./: .env  README.md  README_enhanced.md  agent_to_a2a.py  db_connections.json  etl_agent_core.py  etl_designer_code.py  generated_etl_code.py  launcher.py  main.py  pyproject.toml  requirements.txt
etl_agent/: __init__.py  agent_to_a2a.py  database_manager.py  etl_agent_core.py  gradio_interface.py  mcp_server.py  scheduler.py  scheduler_service.py
etl_agent/connectors/: __init__.py  mongodb_connector.py  oracle_connector.py  sql_connector.py
etl_agent/utils/: logger.py  logger_old.py
tools/: database_connector.py  etl_processor.py  mongodb_connector.py
